# tc-micom-manager

./: Makefile.am  configure.ac
inc/: DBusMsgDef.h  tc-app-demo.h  tc-micom-dbusmanager.h  tc-micom-log.h  tc-micom-manager.h  tc-micom-protocol.h  tc-sdm-demo.h  tc-virtual-key.h
src/: main.c  tc-micom-manager.c
src/app-demo/: tc-app-demo.c  tc-sdm-demo.c
src/dbus-interface/: DBusMsgDefNames.c  tc-micom-dbusmanager.c
src/tests/: parser-test.c
src/virtual-key/: tc-key-map.c  tc-virtual-key.c
